k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger-api
  namespace: payments
  labels:
    app: ledger-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ledger-api
  template:
    metadata:
      labels:
        app: ledger-api
    spec:
      containers:
        - name: ledger-api
          image: ledger-api:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
